infrastructure/manifests/cdns.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cdns
  namespace: cdns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cdns
  template:
    metadata:
      labels:
        app: cdns
    spec:
      containers:
      - name: cdns
        image: catenaxdevacr.azurecr.io/cdns
        ports:
        - containerPort: 8080
          - name: MAPPINGTABLENAME
            value: "OneIdDnsMapping"
          - name: STORAGE_CONNECTIONSTRING
            valueFrom:
              secretKeyRef:
                key: sotrage_connectionstring
                name: partsmasterdata-secret
---
apiVersion: v1
kind: Service
metadata:
  name: cdns
  namespace: cdns
spec:
  type: ClusterIP
  ports:
  - port: 8080
  selector:
    app: cdns
