infrastructure/manifests/portal.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portal
  namespace: portal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portal
  template:
    metadata:
      labels:
        app: portal
    spec:
      containers:
      - name: portal
        image: catenaxdevacr.azurecr.io/portal
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-resource-group: catenax-dev-node-rg
  name: portal-load-balancer
  namespace: portal
spec:
  loadBalancerIP: 20.79.77.83
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: portal
