infrastructure/manifests/semantics.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: semantics
  namespace: semantics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: semantics
  template:
    metadata:
      labels:
        app: semantics
    spec:
      containers:
      - name: semantics
        image: tsicatenaxdevacr.azurecr.io/semantics:latest
        imagePullPolicy: Always
        ports:
---
apiVersion: v1
kind: Service
metadata:
  name: semantics
  namespace: semantics
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 4242
  selector:
    app: semantics
