infrastructure/manifests/simplescheduler.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simplescheduler
  namespace: centralconnector
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simplescheduler
  template:
    metadata:
      labels:
        app: simplescheduler
    spec:
      containers:
        - name: simplescheduler
          image: catenaxdevacr.azurecr.io/simplescheduler
          volumeMounts:
            - name: configuration
              mountPath: /config
              readOnly: true
          ports:
            - containerPort: 8081
      volumes:
        - name: @project.parent.artifactId
          configMap:
            name: simplescheduler
            items:
              - key: application-resources.yml
                path: application-resources.yml
---
apiVersion: v1
kind: Service
metadata:
  name: simplescheduler
  namespace: centralconnector
spec:
  type: ClusterIP
  ports:
    - port: 8081
  selector:
    app: simplescheduler
