infrastructure/manifests/simplescheduler.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simplescheduler
  namespace: simplescheduler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simplescheduler
  template:
    metadata:
      labels:
        app: simplescheduler
    spec:
      containers:
        - name: simplescheduler
          image: catenaxdevacr.azurecr.io/simplescheduler
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: simplescheduler
  namespace: simplescheduler
spec:
  type: ClusterIP
  ports:
    - port: 8081
  selector:
    app: simplescheduler
