infrastructure/manifests/uploadapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uploadappadapter
  namespace: partsmasterdata
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uploadappadapter
  template:
    metadata:
      labels:
        app: uploadappadapter
    spec:
      containers:
      - name: uploadappadapter
        image: catenaxdevacr.azurecr.io/uploadappadapter
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: uploadappadapter
  namespace: partsmasterdata
spec:
  type: ClusterIP
  ports:
  - port: 8080
  selector:
    app: uploadappadapter
