infrastructure/manifests/cdns-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cdns-ingress
  namespace: cdns
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-staging
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
  - hosts:
    - catenaxdevakssrv.germanywestcentral.cloudapp.azure.com
    secretName: tls-certificate
  rules:
  - host: catenaxdevakssrv.germanywestcentral.cloudapp.azure.com
    http:
      paths:
      - path: /cdns(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: cdns
            port:
              number: 8080
