infrastructure/manifests/semantics-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: semantics-ingress
  namespace: semantics
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-staging
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
spec:
  tls:
  - hosts:
    - tsicatenaxdevakssrv.germanywestcentral.cloudapp.azure.com
    secretName: tls-certificate
  rules:
  - host: tsicatenaxdevakssrv.germanywestcentral.cloudapp.azure.com
    http:
      paths:
      - path: /semantics(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: semantics
            port:
              number: 8080
