infrastructure/manifests/uploadapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uploadappadapter-ingress
  namespace: partsmasterdata
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-staging
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
spec:
  tls:
  - hosts:
    - catenaxdevakssrv.germanywestcentral.cloudapp.azure.com
  rules:
  - host: catenaxdevakssrv.germanywestcentral.cloudapp.azure.com
    http:
      paths:
      - path: /uploadappadapter(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: uploadappadapter
            port:
              number: 8080
